--- a/Client/Website/src/app/components/activities/activity-overview/activity-overview.component.html
+++ b/Client/Website/src/app/components/activities/activity-overview/activity-overview.component.html
@@ -3,7 +3,7 @@
         <td style="padding: 16px; height:60vh;">
 
             <img style="vertical-align: middle; object-fit: cover;" width="100%" height="100%"
-                src="../../../assets/activity-1.jpg">
+            [src]="image.at(0)" onerror="this.src='assets/placeholder.png'">
 
         </td>
         <td style="padding: 16px; height: 60vh; width: 40%; ">
