--- a/Client/Website/src/app/components/database/change/change.component.html
+++ b/Client/Website/src/app/components/database/change/change.component.html
@@ -15,47 +15,44 @@
 <div style="overflow: hidden;" class="content" mat-dialog-content>
     <table style="table-layout: fixed; width: 100%;">
         <tr>
-            <td class="padded" style="text-align: right; vertical-align: bottom;"
+            <td class="padded" style="text-align: right; vertical-align: top; "
                 *ngIf="side_panel != 'empty' || standalone_field">
-                <table style="table-layout: fixed">
-                    <ng-container *ngIf="side_panel == 'images'">
+                <table style="table-layout: fixed; overflow-y: scroll;">
+
+
+                    <!-- Image | Images | Mixed -->
+                    <div *ngIf="side_panel == 'images' || side_panel == 'image'">
 
                         <tr>
                             <td colspan="2">
-                                <!-- <img width="100%" src="../../../../../assets/room-1.png"
-                                    height="100%"> -->
-
-                                <!-- <app-carousel #carousel> -->
-
                                 <ng-container *ngFor="let image of images; let i = index">
-                                    <!-- <ng-container *carouselItem> -->
+
                                     <ngp-image-picker *ngIf="i == current_image"
-                            
                                         [_imageSrc]="image.base64 ? 'data:image/png;base64,' + image.base64 : ''"
                                         [_config]="imagePickerConf"
                                         ($imageChanged)="onImageChange($event, image, i)"></ngp-image-picker>
-                                    <!-- </ng-container> -->
 
                                 </ng-container>
 
-                                <!-- </app-carousel> -->
                             </td>
                         </tr>
-                        <tr>
-                            <td style="padding-right: 0px; width: 50%;"> <button (click)="prev()" *ngIf="current_image > 0"
-                                    class="image-btn">{{ 'previous' | translate }}</button> </td>
-                            <td style="padding-left: 0px; width: 50%;"> <button (click)="next()" *ngIf="current_image < images.length - 1"
+
+                        <!-- Images -->
+                        <tr *ngIf="side_panel == 'images'">
+                            <td style="padding-right: 0px; width: 50%;"> <button (click)="prev()"
+                                    *ngIf="current_image > 0" class="image-btn">{{ 'previous' |
+                                    translate }}</button> </td>
+                            <td style="padding-left: 0px; width: 50%;"> <button (click)="next()"
+                                    *ngIf="current_image < images.length - 1"
                                     class="image-btn">{{'next' | translate}}</button>
                             </td>
                         </tr>
-                    </ng-container>
+                    </div>
 
-                    <!-- Tables -->
-                    <ng-container *ngIf="side_panel == 'table' && table">
+                    <!-- Tables | Mixed -->
+                    <div *ngIf="side_panel == 'table' && table">
 
-
-                        <table mat-table [dataSource]="table.data"
-                            style="width: 10%; margin: 32px;">
+                        <table mat-table [dataSource]="table.data" style="width: 5%; margin: 32px;">
 
                             <ng-container *ngFor="let col of table.columns">
 
@@ -154,14 +151,15 @@
                             <tr mat-row *matRowDef="let row; columns: getDisplayedColumnsKey;">
                             </tr>
 
-
                         </table>
 
                         <button class="back-btn" (click)="pushData()" mat-button>{{'add_entry' |
                             translate}}</button>
 
 
-                    </ng-container>
+                    </div>
+
+                    <!-- Permissions -->
                     <ng-container *ngIf="side_panel == 'permissions' && permissions">
 
                         <table style="table-layout: fixed;">
@@ -209,21 +207,36 @@
                     </tr>
                 </table>
             </td>
-            <td class="padded" style="text-align: left">
+            <td class="padded" *ngIf="fields.length" style="text-align: left">
 
                 <!-- Fields -->
 
                 <table style="table-layout: fixed; width: 90%;">
 
                     <tr *ngFor="let field of fields; let i = index">
-                        <td *ngFor="let x of iterator">
 
-                            <app-completion [uniqueness]="uniqueness" *ngIf="fields[x + i * size]"
-                                [outer_data]="outer_data" [data]="data"
-                                [field]="fields[x + i * size]" [fields]="fields"
-                                [linked_data]="linked_data">
-                            </app-completion>
-                        </td>
+                        <ng-container *ngIf="field.type == 'image' && images[0]">
+
+                            <ngp-image-picker
+                                [_imageSrc]="images[0].base64 ? 'data:image/png;base64,' + images[0].base64 : ''"
+                                [_config]="imagePickerConf"
+                                ($imageChanged)="onImageChange($event, images[0], i)"></ngp-image-picker>
+
+                        </ng-container>
+
+                        <ng-container *ngIf="field.type != 'image'">
+
+                            <td *ngFor="let x of iterator">
+
+
+                                <app-completion [uniqueness]="uniqueness"
+                                    *ngIf="fields[x + i * size]" [outer_data]="outer_data"
+                                    [data]="data" [field]="fields[x + i * size]" [fields]="fields"
+                                    [linked_data]="linked_data">
+                                </app-completion>
+                            </td>
+
+                        </ng-container>
                     </tr>
                     <tr *ngFor="let field of static_fields">
 
