--- a/Client/Website/src/app/pages/chat/admin/chat.component.html
+++ b/Client/Website/src/app/pages/chat/admin/chat.component.html
@@ -28,14 +28,14 @@
                     <!-- Title -->
                     <div style="width: 95%; margin: 16px;">
 
-                        <p class="title">{{chat?.user_2?.value?.first_name}}</p>
+                        <p class="title">{{chat.get(id)?.user_2?.value?.first_name}}</p>
                         <mat-divider style="background-color: white;"></mat-divider>
                     </div>
 
                     <!-- Messages -->
 
                     <table style="margin: 16px; margin-top: 128px; width: 95%;">
-                        <ng-container *ngFor="let c of chat?.messages; let i = index">
+                        <ng-container *ngFor="let c of chat.get(id)?.messages; let i = index">
 
                             <tr>
                                 <td style="height: fit-content;" class="col unselectable">
@@ -62,7 +62,7 @@
                             <!-- Date -->
                             <tr>
 
-                                <td *ngIf="(i == chat?.messages!.length - 1 || formatDate(chat?.messages![i + 1].date) != formatDate(c.date) || chat?.messages![i + 1].owner_id != c.owner_id)"
+                                <td *ngIf="(i == chat.get(id)?.messages!.length - 1 || formatDate(chat.get(id)?.messages![i + 1].date) != formatDate(c.date) || chat.get(id)?.messages![i + 1].owner_id != c.owner_id)"
                                     class="col" [style.float]="c.owner_id == id ? 'left' : 'right'">
                                     <p [style.color]="hovered_id == i ? 'white' : 'transparent'"
                                         style="margin: 0px;" class="date">
