Fixed merging problems📱
1. N/A
2. 10
3. Fixed merging problems resulting from the merge of optimization

--- a/Client/Application/src/app/tabs/tabs.page.html
+++ b/Client/Application/src/app/tabs/tabs.page.html
@@ -1,7 +1,10 @@
+
+<ion-router-outlet></ion-router-outlet>
+
 <ion-toolbar>
   
-  <ion-router-outlet></ion-router-outlet>
-  <ion-tabs>
+  
+  <!-- <ion-tabs> -->
   
     
     <table [style.backgroundColor]="color" class="container" slot="bottom">
@@ -55,5 +58,5 @@
 </td>
 </tr>
 </table>
-</ion-tabs>
+<!-- </ion-tabs> -->
 </ion-toolbar>
