--- a/Client/Application/src/app/components/database/blocks/filter/filter.component.html
+++ b/Client/Application/src/app/components/database/blocks/filter/filter.component.html
@@ -30,9 +30,9 @@
           
           
           <ng-container *ngIf="filter_by && filter_by.type === 'rating'">
-              <star-rating size="large" style="display: inline;" staticColor="ok"
+              <!-- <star-rating size="large" style="display: inline;" staticColor="ok"
                   (ratingChange)="updateFilterValue($event.rating); applyFilter(true)"
-                  [rating]="parseInt(filter)"></star-rating>
+                  [rating]="parseInt(filter)"></star-rating> -->
           </ng-container>
 
 
