--- a/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
+++ b/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
@@ -24,7 +24,7 @@
     <p class="header-2">The Chefs</p>
     <div class="image-bg">
         <div class="image-container">
-            <img (click)="chef_dialog.openDialog()" src="../../../../../assets/rooms/chefs2.jpg">
+            <img  src="../../../../../assets/rooms/chefs2.jpg">
             <div class="overlay-text">Click here to view</div>
         </div>
     </div>
