--- a/Client/Application/src/app/tabs/tabs.page.scss
+++ b/Client/Application/src/app/tabs/tabs.page.scss
@@ -1,12 +1,11 @@
 .container {
 
     transition: all 250ms ease-in-out;
-    padding: 6px 12px;
     border-radius: 40px;
-    // margin: 24px;
-    width: 80%;
+    margin-bottom: 10px;
+    width: 100%;
+    display: flex;
     position: relative;
-    bottom: 1%;
     left: 50%;
     transform: translateX(-50%);
 
@@ -17,6 +16,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 100%;
     height: 100%;
     justify-content: center;
     // padding: 8px 16px;
@@ -62,10 +62,8 @@
 }
 
 .cell {
-    
-    padding: 8px 16px;
-    // border: white solid 1px;
-    // justify-content: center;
+
+    padding: 0px 8px;
 
 }
 
@@ -90,7 +88,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 10px;
     /* identical to box height */
     display: inline-block;
 
@@ -102,6 +100,6 @@
 .image {
 
     display: inline;
-    width: 8vw;
+    width: 6vw;
 
 }
