--- a/Client/Application/src/app/pages/guest/profile/profile.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.scss
@@ -1,149 +1,57 @@
-.main-button {
-    color: #14274A;
-    background-color: white;
-    position: absolute;
-    text-transform: uppercase;
-    border-color: transparent;
-    font-family: 'Roboto';
-}
+.container {
 
-.main-button:hover {
-
-    background-color: lightgray
-}
-
-.edit-button {
-    @extend .main-button;
-    font-size: 18px;
-    top: 20%;
-    height: 60px;
-    width: 200px;
-    left: 40px;
-
-}
-
-.change-pass-button {
-    @extend .main-button;
-    font-size: 18px;
-    top: 20%;
-    height: 60px;
-    width: 230px;
-    right: 40px;
-}
-.logout-button {
-    @extend .main-button;
-    font-size: 18px;
-    top: 30%;
-    height: 60px;
-    width: 230px;
-    right: 40px;
-}
-
-.promo-code-button {
-    @extend .main-button;
-    font-size: 24px;
-    line-height: 50px;
-    margin-top: 16px;
-    height: 10%;
-    width: 20%;
     position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.user {
-    text-align: center;
-    color: white;
-    font-family: 'Robotto';
-    font-weight: 400;
-    font-size: 50px;
-    margin-bottom: 4px;
-}
-
-.page-titles {
-
-    margin-left: 32px;
-    margin-right: 32px;
-    color: white;
-    font-family: 'Abhaya Libre';
-    font-weight: 400;
-    text-transform: uppercase;
-}
-
-.divider {
-
-    margin-left: 32px;
-    width: 96%;
-    margin-right: 32px;
-
-}
-
-.main-divider {
-
-    align-self: center;
-    width: 25%;
-    margin: 0 auto
-}
-
-.order-img {
-    z-index: 0;
-    display: inline-block;
-    object-fit: cover;
-}
-
-.profile-container {
-    margin-top: 100px;
-    align-content: start;
-    width: 100%;
-    overflow-x: hidden;
-}
-
-
-.orders-container {
+    top: 25%;
     display: flex;
-    flex-wrap: nowrap;
-    overflow-x: scroll;
+    background-color: white;
+    margin: 0px;
+    flex-direction: column;
+    align-items: center;
+    // justify-content: center;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    height: 75%
 }
 
-.order-title {
+.name {
 
-    font-family: 'Abhaya Libre';
-    font-size: 28px;
-    color: white;
-    margin: 8px;
+
+    padding: 16px 16px 0px 16px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 32px;
+    /* identical to box height */
+
+
+    color: #000000;
+
+
+}
+
+.promo {
+
+    --font-family: 'Roboto';
+    --font-style: normal;
+    --font-weight: 400;
+    --font-size: 18px;
+    --line-height: 12px;
+
+    --color: #14274A;
+
+
+}
+
+.options {
+
+    --font-family: 'Roboto';
+    --background: #14274A;
+    --border-radius: 50px;
+    font-size: 12px;
+    font-style: normal;
     font-weight: 400;
-    text-align: center;
 
-}
-
-.wrap {
-
-    position: relative;
-}
-
-.wrap img {
-
-    display: block;
-    height: 20vw;
-    width: 20vw;
-    z-index: 1;
-}
-
-.wrap::before {
-
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba($color: #dddddd, $alpha: 0.2);
-
-}
-
-.wrap:hover::before {
-
-
-    background-color: transparent;
-
+    margin: 0px 12px;
+    width: 50%
 }
