--- a/Client/Application/src/app/pages/guest/profile/profile.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.scss
@@ -6,7 +6,7 @@
     background-color: white;
     margin: 0px;
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
     // justify-content: center;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
@@ -21,6 +21,7 @@
     font-style: normal;
     font-weight: 700;
     font-size: 30px;
+    text-align: center;
     line-height: 32px;
     /* identical to box height */
 
@@ -54,4 +55,14 @@
 
     margin: 0px 12px;
     width: 50%
+}
+
+.order-imgs{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    margin: 16px;
+    // padding: 4px;
+    border-radius: 50px;
+    overflow-x: auto;
 }
