--- a/Client/Application/src/app/components/database/change/change.component.html
+++ b/Client/Application/src/app/components/database/change/change.component.html
@@ -2,7 +2,7 @@
     <table style="table-layout: fixed; width: 100%;">
         <td>
             <button style="margin-left: 16px;" class="back-btn" [mat-dialog-close] mat-button
-                color="primary">Go Back
+                color="primary">{{"Go Back" | translate}}
             </button>
         </td>
 
