--- a/Client/Application/src/app/components/facilities/facilities-modal/facilities-modal.component.html
+++ b/Client/Application/src/app/components/facilities/facilities-modal/facilities-modal.component.html
@@ -12,7 +12,7 @@
               <br>
               <br>
               <p class="content-1">
-                  Description:
+                  {{"Description" | translate}}:
               </p>
               <p class="content-2">
                   {{facility.description}}
