--- a/Client/Application/src/app/components/facilities/facilities.component.html
+++ b/Client/Application/src/app/components/facilities/facilities.component.html
@@ -26,6 +26,6 @@
   </table>
   <div class="button-container">
 
-    <button class="learn-more-button" (click)="openModal()">Learn More</button>
+    <button class="learn-more-button" (click)="openModal()">{{"Learn More" | translate}}</button>
    
   </div>
