--- a/Client/Application/src/app/components/activities/activities-modal/activities-modal.component.html
+++ b/Client/Application/src/app/components/activities/activities-modal/activities-modal.component.html
@@ -12,20 +12,20 @@
                 <br>
                 <br>
                 <p class="content-1">
-                    Description:
+                    {{"Description" | translate}}:
                 </p>
                 <p class="content-2">
                     {{activity?.value?.description}}
                 </p><br>
                 <p class="content-1">
-                    Date:
+                    {{"Date" | translate}}:
                 </p>
                 <p class="content-2">
                     {{start_date}} / {{end_date}}
                 </p>
                 <br><br>
                 <p class="content-1">
-                    Total:
+                    {{"Total" | translate}}:
                 </p>
                 <table style="padding: 0px; width: 100%;">
                     <tr>
@@ -36,7 +36,7 @@
                         </td>
                         <td>
                             <p class="cancel-btn">
-                                Cancel
+                                {{"Cancel" | translate}}
                             </p>
                         </td>
                     </tr>
@@ -49,9 +49,9 @@
         <td>
             <button class="book-btn" [disabled]="seats == 0 || free < 0" class="disabled-btn"
             (click)="register()">
-            Register
+            {{"Register" | translate}}
             </button>
         </td>
     </tr>
 </table>
-<button class="back-btn" (click)="closeModal()">Back</button>
+<button class="back-btn" (click)="closeModal()">{{"Back" | translate}}</button>
