--- a/Client/Application/src/app/components/activities/activities.component.html
+++ b/Client/Application/src/app/components/activities/activities.component.html
@@ -27,6 +27,6 @@
     </table>
     <div class="button-container">
 
-      <button class="learn-more-button" (click)="openModal()">Learn More</button>
+      <button class="learn-more-button" (click)="openModal()">{{"Learn More" | translate}}</button>
     </div>
   </div>
