--- a/Client/Application/src/app/components/room/room-details/room-details.component.html
+++ b/Client/Application/src/app/components/room/room-details/room-details.component.html
@@ -19,7 +19,7 @@
             </div>
             <br>
             <div style="vertical-align: middle;">
-                <p class="title-1">Description</p>
+                <p class="title-1">{{"Description" | translate}}</p>
                 <mat-divider style="border-top-color: white"></mat-divider>
                 <br>
                 <p class="content-2">
@@ -27,14 +27,14 @@
                 </p>
                 <br>
                 <p class="content-1">
-                    Occupancy:
+                    {{"Occupancy" | translate}}:
                 </p>
                 <p class="content-2">
                     {{formatOccupancy}}
                 </p>
                 <br><br>
                 <p *ngIf="overview" class="content-1">
-                    Total:
+                    {{"Total" | translate}}:
                 </p>
                 <table style="width: 100%; padding: 0px;">
                     <tr>
@@ -48,7 +48,7 @@
                                 style="position: relative; top: 36px" [invisible_input]="true"
                                 #calendar [room_id]="room.key"></app-calendar>
                             <p (click)="calendar.downloadConflicts()" class="cancel-btn">
-                                Book
+                                {{"Book" | translate}}
                             </p>
                         </td>
                     </tr>
