--- a/Client/Application/src/app/components/room/room-item/room-item.component.html
+++ b/Client/Application/src/app/components/room/room-item/room-item.component.html
@@ -18,7 +18,7 @@
             </td>
             <td>
                 <button class="check-btn" (click)="route()">
-                    View Details
+                    {{"View Details" | translate}}
                 </button>
             </td>
             <td>
