--- a/Client/Application/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Client/Application/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -8,15 +8,14 @@
                 <img alt="Silhouette of mountains"
                     src="https://ionicframework.com/docs/img/demos/card-media.png" />
                 <ion-card-header>
-                    <ion-card-title>User Database</ion-card-title>
+                    <ion-card-title>{{"User Database" | translate}}</ion-card-title>
                     <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
                 </ion-card-header>
 
                 <ion-card-content>
-                    A section to manage the Users currently in the app, including demotion,
-                    promotion and permissions.
+                    A section to manage the Users currently in the app, including demotion, promotion and permissions.
                 </ion-card-content>
-                <ion-button fill="clear" [routerLink]="['/admin/user-database']">Access</ion-button>
+                <ion-button fill="clear" [routerLink]="['/admin/user-database']">{{"Access" | translate}}</ion-button>
             </ion-card>
         </ion-item>
         <ion-item>
@@ -25,16 +24,15 @@
                 <img alt="Silhouette of mountains"
                     src="https://ionicframework.com/docs/img/demos/card-media.png" />
                 <ion-card-header>
-                    <ion-card-title>Rooms Database</ion-card-title>
+                    <ion-card-title>{{"Rooms Database" | translate}}</ion-card-title>
                     <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
                 </ion-card-header>
 
                 <ion-card-content>
-                    A section to manage the Users currently in the app, including demotion,
-                    promotion and permissions.
+                    A section to manage the Users currently in the app, including demotion, promotion and permissions.
                 </ion-card-content>
                 <ion-button fill="clear"
-                    [routerLink]="['/admin/rooms-database']">Access</ion-button>
+                    [routerLink]="['/admin/rooms-database']">{{"Access" | translate}}</ion-button>
             </ion-card>
         </ion-item>
         <ion-item>
@@ -43,16 +41,15 @@
                 <img alt="Silhouette of mountains"
                     src="https://ionicframework.com/docs/img/demos/card-media.png" />
                 <ion-card-header>
-                    <ion-card-title>Bookings Database</ion-card-title>
+                    <ion-card-title>{{"Bookings Database" | translate}}</ion-card-title>
                     <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
                 </ion-card-header>
 
                 <ion-card-content>
-                    A section to manage the Users currently in the app, including demotion,
-                    promotion and permissions.
+                    A section to manage the Users currently in the app, including demotion, promotion and permissions.
                 </ion-card-content>
                 <ion-button fill="clear"
-                    [routerLink]="['/admin/booking-database']">Access</ion-button>
+                    [routerLink]="['/admin/booking-database']">{{"Access" | translate}}</ion-button>
             </ion-card>
         </ion-item>
         <ion-item>
@@ -61,15 +58,14 @@
                 <img alt="Silhouette of mountains"
                     src="https://ionicframework.com/docs/img/demos/card-media.png" />
                 <ion-card-header>
-                    <ion-card-title>Food Database</ion-card-title>
+                    <ion-card-title>{{"Food Database" | translate}}</ion-card-title>
                     <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
                 </ion-card-header>
 
                 <ion-card-content>
-                    A section to manage the Users currently in the app, including demotion,
-                    promotion and permissions.
+                    A section to manage the Users currently in the app, including demotion, promotion and permissions.
                 </ion-card-content>
-                <ion-button fill="clear" [routerLink]="['/admin/food-database']">Access</ion-button>
+                <ion-button fill="clear" [routerLink]="['/admin/food-database']">{{"Access" | translate}}</ion-button>
             </ion-card>
         </ion-item>
         <!-- <div class="row">
