--- a/Client/Application/src/app/pages/authentication/login/login.component.html
+++ b/Client/Application/src/app/pages/authentication/login/login.component.html
@@ -1,13 +1,13 @@
-<ion-img class="header-1 center" src="../../../../assets/login/header-2.png"></ion-img>
+<ion-img class="header-1 center" src="../../../../assets/login/ | translateheader-2.png"></ion-img>
 <ion-img class="header-2 center" src="../../../../assets/login/header-1.png"></ion-img>
 <div class="labels">
-    <ion-text class="title">Login Now</ion-text>
+    <ion-text class="title">{{"Login Now" | translate}}</ion-text>
     <ion-input [(ngModel)]="email" placeholder="Email"
         class="input"></ion-input>
     <ion-input [(ngModel)]="password" placeholder="Password"
         class="input"></ion-input>
-    <ion-text class="password">Forgot Password?</ion-text>
-    <ion-button (click)="login()" class="login">Login</ion-button>
-    <ion-text class="register">Don't have an Account <a [routerLink]="['../register']"
-            class="register-button">Sign-up</a></ion-text>
+    <ion-text class="password">{{"Forgot Password?" | translate}}</ion-text>
+    <ion-button (click)="login()" class="login">{{"Login" | translate}}</ion-button>
+    <ion-text class="register">{{"Don't have an Account" | translate}} <a [routerLink]="['../register']"
+            class="register-button">{{"Sign-up" | translate}}</a></ion-text>
 </div>
