--- a/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.html
+++ b/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.html
@@ -2,11 +2,11 @@
   
   <div class="main">
     <p class="title">
-        This is it.
+        {{"This is it." | translate}}
     </p>
   </div>
 
-  <h1 class="rooms-header">Rooms and rates</h1>
+  <h1 class="rooms-header">{{"Rooms and rates" | translate}}</h1>
   <hr>
 
   <!-- <div>
