Started the Design of the Orders🏁
1. Design, Implement and Link Profile
2. 10
3. Added the table layout that will hold the order's images.

--- a/Client/Application/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.html
@@ -39,4 +39,15 @@
         </div>
     </ion-segment>
 
+    <table style="width:100%;table-layout: fixed;">
+
+        <tr style="width:100%">
+            <td class="order">1</td>
+            <td class="order">2</td>
+            <td class="order">3</td>
+        </tr>
+
+    </table>
+
+
 </div>
