--- a/Client/Application/src/app/pages/guest/profile/profile.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.scss
@@ -89,3 +89,9 @@ ion-segment-button {
     --indicator-box-shadow: 0;
     transition: all 250ms ease-in-out;
 }
+
+.order{
+    padding: 2px;
+    text-align: center;
+    
+}
