--- a/Client/Application/src/app/tabs/tabs.page.scss
+++ b/Client/Application/src/app/tabs/tabs.page.scss
@@ -2,13 +2,34 @@
 
     transition: all 250ms ease-in-out;
     border-radius: 40px;
-    margin-bottom: 10px;
-    width: 100%;
+    // margin-bottom: 10px;
+    width: 90%;
     display: flex;
     position: relative;
     left: 50%;
+    bottom: 16px;
     transform: translateX(-50%);
 
+}
+
+.user-name {
+
+    font-family: 'Asap';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+
+    color: #14274A
+}
+
+.burger-btn {
+
+    --background: transparent;
+    --background-activated-opacity: 0;
+    --background-focused-opacity: 0;
+    --ripple-color: transparent;
+    --box-shadow: none;
 }
 
 .block-container {
@@ -27,13 +48,14 @@
 
 .block-container-active {
 
-    padding: 8px 12px;
+    padding: 0px 8px;
     background-color: white;
     width: 100%;
     // height: 100%;
 
 
 }
+
 .block-container-active2 {
 
     transition: all 250ms ease-in-out;
@@ -54,11 +76,11 @@
 }
 
 .tab {
-    
+
     background-color: transparent;
     display: inline-block;
-    
-    
+
+
 }
 
 .cell {
@@ -69,19 +91,19 @@
 
 
 .active-text {
-    
+
     visibility: visible;
-    
+
 }
 
 .inactive-text {
-    
+
     visibility: hidden;
-    
+
 }
 
 .text-active {
-    
+
     transition: all 2500ms ease-in-out;
     margin: 4px;
     font-family: 'Asap';
@@ -101,5 +123,35 @@
 
     display: inline;
     width: 6vw;
+
+}
+
+.tabs {
+
+    margin: 24px;
+    font-family: 'Asap';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    width: 100%;
+    text-transform: uppercase;
+    color: #14274A;
+
+}
+
+.bottom {
+
+    margin: 24px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+
+    color: #14274A;
+
+    border: 0.5px solid #FFFFFF;
+
 
 }
